# reduceit

./: Cargo.toml
reduceit/: Cargo.toml
reduceit/src/: main.rs
src/: counting.rs  dd.rs  lib.rs  lower.rs  main.rs  tests.rs
src/lower/: ast.rs  delim.rs  kleene.rs  opt.rs  token.rs
test/: Cargo.toml
test/src/: main.rs  runtest.rs
test/ui/: helloworld.rs  helloworld.rs.reduced
