[package]
name = "reduceit"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.syn]
version = "1.0"
features = ["full", "parsing", "printing"]

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.smol_str]
version = "0.1"

[dependencies.tempfile]
version = "3.2.0"
